@startuml
!pragma layout smetana
skinparam defaultFontName Arial
skinparam defaultFontSize 14
skinparam shadowing false
skinparam backgroundColor #FFFFFF
skinparam ArrowColor #334155
skinparam activityBackgroundColor #EFF6FF
skinparam activityBorderColor #2563EB
skinparam activityDiamondBackgroundColor #FFF7ED
skinparam activityDiamondBorderColor #C2410C
skinparam usecaseBackgroundColor #EFF6FF
skinparam usecaseBorderColor #2563EB
skinparam padding 8
title ERD-AFTERSALES — PC Store
hide circle
skinparam linetype ortho
skinparam entityBackgroundColor #F8FAFC
skinparam entityBorderColor #475569
entity "warranty_requests" as warranty_requests {
* id: uuid <<PK>>
* code: varchar(32)
* user_id: uuid <<FK>>
* order_item_id: uuid <<FK>>
* item_unit_index: integer
* client_request_id: uuid
* request_hash: varchar(64)
* warranty_start_at: timestamptz
* warranty_expires_at: timestamptz
* issue_description: varchar(2000)
* status: varchar(20)
  public_resolution: varchar(2000)
  internal_note: varchar(2000)
  received_at: timestamptz
  closed_at: timestamptz
* version: bigint
* created_at: timestamptz
* updated_at: timestamptz
}
entity "warranty_request_images" as warranty_request_images {
* id: uuid <<PK>>
* request_id: uuid <<FK>>
* storage_key: varchar(255)
* mime_type: varchar(32)
* size_bytes: bigint
* checksum: varchar(64)
* sort_order: smallint
* created_at: timestamptz
}
entity "warranty_request_events" as warranty_request_events {
* id: uuid <<PK>>
* request_id: uuid <<FK>>
* actor_id: uuid <<FK>>
  from_status: varchar(20)
* to_status: varchar(20)
  public_note: varchar(2000)
  internal_note: varchar(2000)
* created_at: timestamptz
}
entity "order_items (tham chiếu)" as order_items {
* id: uuid <<PK>>
}
entity "users (tham chiếu)" as users {
* id: uuid <<PK>>
}
users ||--o{ warranty_requests : user_id
order_items ||--o{ warranty_requests : order_item_id
warranty_requests ||--o{ warranty_request_images : request_id
warranty_requests ||--o{ warranty_request_events : request_id
users ||--o{ warranty_request_events : actor_id
@enduml
